[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "enite"
version = "0.1.7"
[tool.poetry.dependencies]
discord = "^1.0.1"
flask = "^1.1.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
