[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Quinten <quinten-vd@outlook-com>"]
description = ""
name = "enite"
version = "0.1.9"
[tool.poetry.dependencies]
discord = "^1.0.1"
flask = "^1.1.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
